objects/Test_Score__c.object
<CustomObject><fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Test Score</label><nameField>
        <label>Test Score Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Test Scores</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>